# k8s-viewer

./: .flake8  .gitignore  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
settings/: default.conf  local.conf
viewer_app/: main.py  worker.py  yoyo.ini
viewer_app/api/: dependencies.py
viewer_app/api/routers/: k8s.py
viewer_app/api/schemas/: response_deployments.py
viewer_app/clients/: base_client.py  fake_client.py  k8s_clients.py  toy_client.py
viewer_app/configs/: base.conf  dev.conf
viewer_app/configs-app/: dev.conf
viewer_app/core/: config.py  db.py
viewer_app/k8s/: client.py  fake.py  kube.py
viewer_app/kube/: client.py  fake.py  kube.py  schemas.py
viewer_app/migrations/: 20250203_01_c0xiX-add-column-to-deployments-and-envs.py
viewer_app/models/: response_deployments.py
viewer_app/repositories/: database.py  deployment_repo.py  envs_repo.py  schemas.py  service_db.py
viewer_app/services/: base_k8s_service.py  cluster_k8s_service.py  deploymen_service.py  k8s_cluster.py  k8s_service.py
viewer_app/services/domain/: deployments.py
