[project]
name = "k8s-viewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.8",
    "k8s>=0.28.0",
    "kubernetes>=32.0.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "pyhocon>=0.3.61",
    "uvicorn>=0.34.0",
    "yoyo-migrations>=9.0.0",
]
